# ensemble-software-engineering

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MILESTONE_1_0_0.md  README.md  pyproject.toml  start_ese.sh  workflow.md
.github/workflows/: ese.yml  portability.yml  pypi-publish.yml
apps/contract_intelligence/: README.md  __main__.py  cli.py
apps/contract_intelligence/ingestion/: project_loader.py
apps/contract_intelligence/orchestration/: bid_review_runner.py  ese_bridge.py
docs/: CONFIG_CONTRACT.md  EXTENSIBILITY.md  PIPELINE_STATE.md  RELEASE.md  TROUBLESHOOTING.md
docs/adr/: 0001-core-vs-vertical-application-boundary.md
ese/: adapters.py  artifact_views.py  cli.py  config.py  config_packs.py  dashboard.py  diff_context.py  doctor.py  evidence_state.py  extension_contracts.py  init_wizard.py  integrations.py  local_runtime.py  pipeline.py  policy_checks.py  pr_review.py  provider_runtime.py  repo_context.py  report_exporters.py  reports.py  role_drafting.py  starter_sdk.py  templates.py
examples/release_integration_plugin/: README.md  pyproject.toml
examples/release_integration_plugin/src/release_integration_plugin/: integration.py
examples/release_policy_plugin/: README.md  pyproject.toml
examples/release_policy_plugin/src/release_policy_plugin/: __init__.py  policy.py
examples/release_reporting_plugin/: README.md  pyproject.toml
examples/release_reporting_plugin/src/release_reporting_plugin/: __init__.py  exporters.py  views.py
starters/architecture_review_starter/: README.md  pyproject.toml
starters/architecture_review_starter/src/architecture_review_starter/: ese_starter.yaml  integration.py
starters/release_governance_starter/: README.md  pyproject.toml
starters/release_governance_starter/src/release_governance_starter/: ese_starter.yaml  exporters.py
tests/: test_adapters.py  test_artifact_views.py  test_cli.py  test_config.py  test_config_packs.py  test_contract_intelligence_bid_review.py  test_dashboard.py  test_diff_context.py  test_doctor.py  test_example_github_integration.py  test_init_wizard.py  test_integrations.py  test_local_runtime.py  test_pipeline.py  test_policy_checks.py  test_pr_review.py  test_report_exporters.py  test_reports.py  test_starter_sdk.py  test_templates.py
