[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "release-integration-plugin"
version = "0.1.0"
description = "Example external ESE integration plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ese-cli"]

[project.entry-points."ese.integrations"]
filesystem_evidence = "release_integration_plugin.integration:load_integration"
github_pr_evidence = "release_integration_plugin.integration:load_github_integration"

[tool.setuptools.packages.find]
where = ["src"]
